--- a/public/css/styles.styl
+++ b/public/css/styles.styl
@@ -3,40 +3,44 @@
 
 
 @font-face {
-  font-family: 'paulistana_deconormal';
-  src: url('paulistana_deco-webfont.eot');
-  src: url('paulistana_deco-webfont.eot?#iefix') format('embedded-opentype'),
-  url('paulistana_deco-webfont.woff2') format('woff2'),
-  url('paulistana_deco-webfont.woff') format('woff'),
-  url('paulistana_deco-webfont.ttf') format('truetype'),
-  url('paulistana_deco-webfont.svg#paulistana_deconormal') format('svg');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'paulistana_deconormal';
+    src: url('/font/paulistana_deco-webfont.eot');
+    src: url('/font/paulistana_deco-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/font/paulistana_deco-webfont.woff2') format('woff2'),
+    url('/font/paulistana_deco-webfont.woff') format('woff'),
+    url('/font/paulistana_deco-webfont.ttf') format('truetype'),
+    url('/font/paulistana_deco-webfont.svg#paulistana_deconormal') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 body
-  background black
-  font-size 16px
+    background black
+    font-size 16px
 
 
 .wrapper
-  width 100%
+    width 100%
 
 #izq
-  background url("/images/bg_noticias.png") repeat-x #272727
-  display inline-block
+    background url("/images/bg_noticias.png") repeat-x #272727
+    display inline-block
 
 
 #der
-  background url("/images/bg_principal.png")
+    background url("/images/bg_principal.png")
 
 .logo_principal
-  width 50%
+    width 50%
 
 .noticia
-  h2
-    display blocks
-    font-family 'paulistana_deconormal'
-    font-size 1.1em
-    color white
-    background #FCC105
+    h2
+        background #FCC105
+        color white
+        display blocks
+        font-family 'paulistana_deconormal'
+        font-size 2em
+        padding 0.5em
+
+    img
+
