--- a/public/css/styles.styl
+++ b/public/css/styles.styl
@@ -18,29 +18,86 @@ body
     background black
     font-size 16px
 
+header
+    background-image  url(/images/bg_lineas_amarillas_header.png)
+    background-repeat no-repeat
+    background-position center top
+    text-align right
+    .social
+        display inline-block
+        margin-top 2em
+        text-align right
+        vertical-align top
+        width 28%
+        li
+            display inline-block
+            margin-left 2px
+            a
+                background-image  url(/images/header_social.png)
+                background-repeat no-repeat
+                display block
+                font-size 0
+                height 54px
+                width 54px
 
-.wrapper
-    width 100%
-    height 100%
+
+    .titulo
+        display inline-block
+        width 50%
+
 
 #izq
     background url("/images/bg_noticias.png") repeat-x #272727
     display inline-block
     float left
     height 100%
-    width 200px
+    width 15%
 
 #der
     background url("/images/bg_principal.png")
+    float right
+    height 100%
+    width 85%
 
 .logo_principal
     width 50%
 
 .menu-principal
-    font-family  'Dosis', sans-serif
-    font-size 1.2em
-    color white
-    text-shadow 0 0 1px black
+    background-image url("/images/bg_menu.png")
+    background-repeat no-repeat
+    height 117px
+    text-align right
+    ul
+        list-style none
+    li
+        display inline-block
+        margin 45px 20px 0 0
+
+    a
+        font-family  'Play', sans-serif
+        font-size 20px
+        font-weight: bold;
+        color white
+        text-shadow 0 0 2px black
+        text-decoration none
+        &:hover
+            border-bottom solid 2px #ffffff
+
+
+/* Iconos Sprites */
+.social-twitter
+    background-position 0 0
+.social-facebook
+    background-position -55px 0
+.social-youtube
+    background-position -109px 0
+.wrapper
+    width 100%
+    height 100%
+
+
+
+
 
 .noticia
     h2
